--- a/02-basico/src/styles.css
+++ b/02-basico/src/styles.css
@@ -1,6 +1,21 @@
+body {
+    margin-bottom: 100px;
+}
+
 footer {
     position: fixed;
     bottom: 0px;
     width: 100%;
     left: 0px;
+}
+
+#chat-mensajes {
+    height: 300px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    overflow-y: scroll;
+}
+
+.chat-input {
+    margin-top: 10px;
 }
