--- a/02-basico/src/app/pages/mensajes/mensajes.component.html
+++ b/02-basico/src/app/pages/mensajes/mensajes.component.html
@@ -1,5 +1,8 @@
 <h1>Usuario: <small>{{wsService?.usuario?.nombre}}</small></h1>
 
+<button class="btn btn-danger" (click)="logout()">
+    Salir
+</button>
 <hr>
 
 <div class="row">
